Fix an alignment issue with file attachment edit icons.
The edit icon rule wasn't updated to use .rb-icon-edit, and was still
using an img, when specifying alignment. This both updates the rule, and
fixes the alignment to actually look a bit better.

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -855,8 +855,8 @@
       margin-top: 0.4em;
     }
 
-    img {
-      vertical-align: middle;
+    .rb-icon-edit {
+      vertical-align: text-bottom;
     }
   }
 }
